# src/routes/user_routes.rs
@@ -1,13 +1,15 @@
 use crate::{handlers::user_handler, state::AppState};
 use axum::{
+    handler::Handler,
     routing::{get, post},
     Router,
 };
 
 pub fn user_routes(state: AppState) -> Router<AppState> {
+    let auth = axum::middleware::from_fn_with_state(state.clone(), crate::middlewares::auth::auth_middleware);
+
     Router::new()
-        .route("/", post(user_handler::create_user).get(user_handler::list_users))
-        .route("/:id", get(user_handler::get_user).put(user_handler::update_user))
-        .layer(axum::middleware::from_fn_with_state(state.clone(), crate::middlewares::auth::auth_middleware))
+        .route("/", post(user_handler::create_user.layer(auth.clone())).get(user_handler::list_users))
+        .route("/:id", get(user_handler::get_user).put(user_handler::update_user).route_layer(auth))
         .with_state(state)
 }
